tests/NormalTests/paczka1/fuzzy1/41453873.err
Error in line 1: 32r S456 25,2
Error in line 13: 32r A364 51,46
Error in line 10: tCx7hIS S197 23,6
Error in line 14: 32r A364 201,8
Error in line 23: A506 A506 92,6
Error in line 28: AWat A506 33,6
Error in line 35: A50s S45s 84,8
